--- a/main.html
+++ b/main.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-
-<html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+</div>
 </body>
-
-</html>
+</html><html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<h2>What is The capital of India?</h2>
+<input type="radio" id="delhi" name="delhi">New Delhi<br>
+<input type="radio" id="delhi" name="delhi">Mumbai
+<div class="main">
+    <h4>New Delhi is the capital of India and an administrative district of NCT Delhi.</h4>
