--- a/main.html
+++ b/main.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-</div>
-</body>
-</html><html lang="en">
+ 
+<html>
+ 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="styles.css">
 </head>
+ 
 <body>
-<h2>What is The capital of India?</h2>
-<input type="radio" id="delhi" name="delhi">New Delhi<br>
-<input type="radio" id="delhi" name="delhi">Mumbai
-<div class="main">
-    <h4>New Delhi is the capital of India and an administrative district of NCT Delhi.</h4>
+	<!-- the entire body must be written by student -->
+	<label for="question">What is the capital of India?</label>
+	<br>
+	<input type="radio" name="question" value="" id=""> New Delhi
+	<br>
+	<input type="radio" name="question" id=""> Mumbai
+	<br>
+	<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">New Delhi is the capital of India and an administrative district of NCT Delhi</blockquote>
+    <script type="text/javascript" src="./script.js">
+</script>
+ 
+</body>
+ 
+</html>
